# engine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Application.cpp  Application.h  Physics.cpp  Physics.h
src/core/resource_manager/: ResourceHolder.cpp  ResourceHolder.h  ResourceManager.h
src/core/states/: StateBase.h
src/core/utils/: FpsCounter.cpp  FpsCounter.h  NonCopyable.h  NonMoveable.h
src/game/components/: AnimationComponent.h  BirdMovementComponent.h  CollisionComponent.h  InputComponent.h  PlayerInputComponent.h  RigidbodyComponent.h  ShapeComponent.h  TransformComponent.h
src/game/entities/: Bird.h  Box.h  Player.h
src/game/physics/: ContactListener.cpp  ContactListener.h
src/game/states/: DemoScene.cpp  DemoScene.h  GameScene.cpp  GameScene.h
src/game/systems/: AnimationSystem.cpp  AnimationSystem.h  BirdMovementSystem.cpp  BirdMovementSystem.h  CollisionSystem.cpp  CollisionSystem.h  InputSystem.cpp  InputSystem.h  LogSystem.cpp  LogSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h  RenderSystem.cpp  RenderSystem.h  SyncPhysicsToGraphicsSystem.cpp  SyncPhysicsToGraphicsSystem.h
